      moved to the password hashes themselves, via the new :meth:`~passlib.ifc.PasswordHash.using`
      and :meth:`~passlib.ifc.PasswordHash.needs_update` methods.  This allows much more flexibility
      when using a hash directly, rather than via CryptContext, as well making it easier for
      CryptContext to support hash-specific parameters.

Deprecations
------------
    * The :class:`~passlib.context.CryptContext` object, and the :class:`~passlib.ifc.PasswordHash` api 
      used by all hashes in passlib, have had a number of cleanups made:

        * :meth:`!encrypt` has been renamed to :meth:`~passlib.ifc.PasswordHash.hash`,
          to clarify that it's performing one-way hashing rather than encryption.
          A compatibility alias will remain in place until Passlib 2.0.
          This should fix the longstanding :issue:`21`.

        * The little-used methods :meth:`~passlib.ifc.PasswordHash.genhash` and
          :meth:`~passlib.ifc.PasswordHash.genconfig` have been deprecated.
          Compatibility aliases will remain in place until Passlib 2.0.

        * In order for :meth:`~passlib.ifc.PasswordHash.hash` to take over the job
          previously performed by :meth:`~passlib.ifc.PasswordHash.genhash`, it now accepts
          a keyword ``"config"``, which specifies an existing hash to extract configuration from.

    * The :func:`~passlib.utils.generate_secret` function has been deprecated
      in favor of the new :mod:`passlib.pwd` module, and the old function will be removed
      in Passlib 2.0.

    * :class:`passlib.utils.handlers.HasManyBackends` internal API changed:

      Applications implementing a custom handler with multiple backends
      should now provide :samp:`_load_backend_{name}` classmethod for each backend.
      This is simpler, more flexible, and more explicit than the
      previous (1.6 and earlier) API, which required a :samp:`_has_backend_{name}`
      class property and a :samp:`_calc_checksum_{name}` method.
